--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 asgiref==3.3.1
+beautifulsoup4==4.9.3
+coverage==5.4
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==3.1.5
+Django==3.1.6
+django-adminlte2==0.4.3
+django-bootstrap4==2.3.1
 django-stdimage==5.1.1
 gunicorn==20.0.4
+model-mommy==2.0.0
 Pillow==8.1.0
 progressbar2==3.53.1
 psycopg2-binary==2.8.6
-python-utils==2.5.2
-pytz==2020.5
+PyMySQL==1.0.2
+python-utils==2.5.6
+pytz==2021.1
 six==1.15.0
+soupsieve==2.2
 sqlparse==0.4.1
 static3==0.7.0
+whitenoise==5.2.0
